--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TrafficViolationDetection"
         tools:targetApi="31">
         <activity
+            android:name=".EditAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditPersonalInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".PersonalInfoActivity"
             android:exported="false" />
         <activity
