--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,55 +12,53 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrafficViolationDetection"
         tools:targetApi="31">
-
-        <!-- Splash Activity is now the launcher activity -->
+        <activity
+            android:name=".CarsLogDetail"
+            android:exported="false" />
+        <activity
+            android:name=".CarsLog"
+            android:exported="false" />
+        <activity
+            android:name=".ViolateTrafficLaw"
+            android:exported="false" /> <!-- Splash Activity is now the launcher activity -->
         <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".EditAccountActivity"
             android:exported="false" />
-
         <activity
             android:name=".EditPersonalInfoActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
-
         <activity
             android:name=".PersonalInfoActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
         <activity
             android:name=".EmailRegisterActivity"
             android:exported="false" />
-
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustPan" />
-
         <activity
             android:name=".NoticeActivity"
             android:exported="false" />
-
         <activity
             android:name=".ForgetPasswordActivity"
             android:exported="false" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
